--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-
+  <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
   <!--link to bootstrap.css-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
@@ -30,7 +30,7 @@
 <div class="container" id="main-container">
   <huit-game>
   	<div class="center">
-      <i class='fa fa-spinner fa-5x fa-spin '></i> 
+      <i class='fa fa-spinner fa-5x fa-spin '></i>
     </div>
   </huit-game>
 </div>
