--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="table huit">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <link rel="icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="assets/images/huit.png" />
   <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
   <!--link to bootstrap.css-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
